--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My Django App</title>
-</head>
-<body>
-    <h1>Welcome to my app!</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Home - IT Head Hunter{% endblock %}
+
+{% block content %}
+    <h2>Welcome to IT Head Hunter!</h2>
+    <p>Find your dream job or post new job openings.</p>
+{% endblock %}
