--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}IT Head Hunter{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Fira Code', monospace;
             margin: 0;
             padding: 0;
             background-color: #f7f7f7;
@@ -48,7 +49,9 @@
             <a href="{% url 'conversation_list' %}">Chat</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'profile' %}">Profile</a>
-                <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'logout' %}" onclick="return confirm('Are you sure you want to logout?');">
+                    Logout
+                </a>
             {% else %}
                 <a href="{% url 'login' %}">Login</a>
                 <a href="{% url 'signup' %}">Signup</a>
